syntax = "proto3";
package user_pb;
option go_package = "pkg/pb/user_pb";

import "google/api/annotations.proto";

service UserService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {
        option (google.api.http) = {
            post: "/auth/register"
            body: "*"
        };
    };

    rpc Login(LoginRequest) returns (LoginResponse) {
        option (google.api.http) = {
            post: "/auth/login"
            body: "*"
        };
    };

    rpc GetMe(GetMeRequest) returns (GetMeResponse) {
        option (google.api.http) = {
            get: "/users/me"
        };
    };

    rpc UpdateMe(UpdateMeRequest) returns (UpdateMeResponse) {
        option (google.api.http) = {
            post: "/users/me"
            body: "*"
        };
    };
}

message User {
    uint32 id = 1;
    string full_name = 2;
    string username = 3;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    User profile = 1;
    string token = 2;
}

message RegisterRequest {
    string full_name = 1;
    string username = 2;
    string password = 3;
}

message RegisterResponse {
}

message GetMeRequest {
}

message GetMeResponse {
    User data = 1;
}

message UpdateMeRequest {
    string full_name = 1;
}

message UpdateMeResponse {
    User data = 1;
}